--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,3 +1,3 @@
 @import './styles/normalize.css';
-@import './styles/globals';
-@import './styles/app'
+@import './styles/_globals';
+@import './styles/_app'
