--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,3 +1,5 @@
-@import './styles/normalize.css';
-@import './styles/_globals';
-@import './styles/_app'
+@import "./styles/normalize.css";
+@import "./styles/_globals";
+@import "./styles/_app";
+@import "./styles/_random-header";
+@import "./styles/_quotes";
