--- a/client/src/styles/_globals.scss
+++ b/client/src/styles/_globals.scss
@@ -37,9 +37,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Domine', serif;
-  font-weight: 400;
-  color: var(--black);
+  font-family: inherit;
 }
 
 caption,
@@ -50,7 +48,7 @@ input {
 html {
   color: var(--text);
   font-size: 18px;
-  line-height: 160%;
+  // line-height: 160%;
   letter-spacing: 0.1px;
   font-family: 'Open Sans', sans-serif;
 }
