--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,5 +1,5 @@
 @import "./styles/normalize.css";
 @import "./styles/_globals";
 @import "./styles/_app";
-@import "./styles/_random-header";
+@import "./styles/_header-random";
 @import "./styles/_quotes";
