--- a/client/src/styles/_header-random.scss
+++ b/client/src/styles/_header-random.scss
@@ -1,7 +1,7 @@
 header {
   display: flex;
   justify-content: flex-end;
-  margin: 15px 25px;
+  margin: 35px 50px 0 0;
   img {
     padding-left: 10px;
     &:hover {
